--- a/MyyCommerce/MyyCommerce/Views/Shared/_Layout.cshtml
+++ b/MyyCommerce/MyyCommerce/Views/Shared/_Layout.cshtml
@@ -1,9 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using MyyCommerce.Domain
+
+@inject SignInManager<ApplicationUser> SignInManager
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Slow Digital</title>
+    <title>MyCommerce</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
@@ -26,19 +31,18 @@
     <script src="~/js/jquery.js"></script>
     <script src="~/js/jquery.unobtrusive-ajax.js"></script>
 
-    <script src="~/js/vendor/bootstrap-datepicker/bootstrap-datepicker.js"></script>
-    <link href="~/css/vendor/bootstrap-datepicker/bootstrap-datepicker3.css" rel="stylesheet" />
 </head>
 <body class="light-sidebar-nav">
 
+    
     <section id="container">
-        <!--header start-->
         <header class="header">
             <partial name="_Header" />
         </header>
-
-        <partial name="_Navigation" />
-
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <partial name="_Navigation" />
+        }
 
         <section id="main-content" class="ClientContent">
             <section class="wrapper">
@@ -47,10 +51,12 @@
         </section>
 
         <footer class="site-footer">
-            
+            <div class="text-center">
+                @DateTime.Now.Year MyCommerce By João Pedro Kalil
+            </div>
         </footer>
-        <!--footer end-->
     </section>
+    
 
     <!-- js placed at the end of the document so the pages load faster -->
 
@@ -75,8 +81,6 @@
     <script src="~/js/sparkline-chart.js"></script>
     <script src="~/js/easy-pie-chart.js"></script>
     <script src="~/js/count.js"></script>
-
-
 
 </body>
 </html>
