--- a/MyyCommerce/MyyCommerce/Views/Shared/_Header.cshtml
+++ b/MyyCommerce/MyyCommerce/Views/Shared/_Header.cshtml
@@ -30,13 +30,23 @@ else {
             @if (!User.IsInRole("Admin"))
             {
                 <li class="DesktopMenu">
-                    <a href="@Url.Action("Index", "Pedido")">
-                        Meus Pedidos
+                    <a href="@Url.Action("Index", "Home", new { Categoria = MyyCommerce.Utils.Enums.eCategoria.Camisa, page = 1 })">
+                        Camisas
                     </a>
                 </li>
                 <li class="DesktopMenu">
-                    <a href="@Url.Action("Index", "Produto")">
-                        Produtos
+                    <a href="@Url.Action("Index", "Home", new { Categoria = MyyCommerce.Utils.Enums.eCategoria.Bermuda, page = 1 })">
+                        Bermudas
+                    </a>
+                </li>
+                <li class="DesktopMenu">
+                    <a href="@Url.Action("Index", "Home", new { Categoria = MyyCommerce.Utils.Enums.eCategoria.Acessorio, page = 1 })">
+                        Acessórios
+                    </a>
+                </li>
+                <li class="DesktopMenu">
+                    <a href="@Url.Action("Index", "Home", new { Categoria = MyyCommerce.Utils.Enums.eCategoria.Calcado, page = 1 })">
+                        Calçados
                     </a>
                 </li>
 
@@ -48,7 +58,7 @@ else {
             }
         </ul>
         <ul class="nav pull-right top-menu">
-            @if (!User.IsInRole("Slow"))
+            @if (!User.IsInRole("Admin"))
             {
                 <li class="DesktopMenu">
                     <a href="@Url.Action("Index", "Checkout")">
@@ -64,6 +74,9 @@ else {
 
             @if (SignInManager.IsSignedIn(User))
             {
+                <li class="DesktopMenu">
+                    <a class="dropdown-item" href="@Url.Action("Index", "Pedido")"> Meus Pedidos </a>
+                </li>
                 <li class="DesktopMenu" style="padding-top: 18px;">
                     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" id="logoutForm" method="post" class="navbar-right">
                         <div class="navbar-right">
