--- a/MyyCommerce/MyyCommerce/Views/Shared/_Layout.cshtml
+++ b/MyyCommerce/MyyCommerce/Views/Shared/_Layout.cshtml
@@ -50,11 +50,11 @@
             </section>
         </section>
 
-        <footer class="site-footer">
+        @*<footer class="site-footer">
             <div class="text-center">
                 @DateTime.Now.Year MyCommerce By João Pedro Kalil
             </div>
-        </footer>
+        </footer>*@
     </section>
     
 
