--- a/MyyCommerce/MyyCommerce/Views/Checkout/_CheckoutProdutosPartial.cshtml
+++ b/MyyCommerce/MyyCommerce/Views/Checkout/_CheckoutProdutosPartial.cshtml
@@ -12,7 +12,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var produto in Model.Produtos)
+        @foreach (var produto in Model.Carrinho.Produtos)
         {
             <tr>
                 <td class="p-name">
